1.9.2 update readme, update command , fix log